@@ -123,7 +123,9 @@
 	<Action name="objects_new_linereflection" />
 	<Action name="objects_new_rotation" />
 	<Action name="objects_new_scalingovercenter" />
+	<Action name="objects_new_scalingovercenter2" />
 	<Action name="objects_new_scalingoverline" />
+	<Action name="objects_new_scalingoverline2" />
 	<Action name="objects_new_similitude" />
 	<Action name="objects_new_harmonichomology" />
 	<Action name="objects_new_affinitygi3p" />
